--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: 290701/studenthub:latest
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
       # uses: advanced-security/maven-dependency-submission-action@v4
