--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: 290701
+        password: dckr_pat_naFfArj2-9jgvkiEYyG4oxlyG3w
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
