--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: 290701/studenthub:latest
+        tags: 290701/studenthub
 
 # name: Java CI with Maven
 
