--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,22 +31,34 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean package
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: 290701
-        password: dckr_pat_naFfArj2-9jgvkiEYyG4oxlyG3w
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
       with:
         context: .
         push: true
         tags: 290701/studenthub
+        builder: default
+        provenance: false
+        # Provide credentials here directly
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+
+    # - name: Login to Docker Hub
+    #   uses: docker/login-action@v3
+    #   with:
+    #     username: 290701
+    #     password: dckr_pat_naFfArj2-9jgvkiEYyG4oxlyG3w
+
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@v3
+
+    # - name: Build and push Docker image
+    #   uses: docker/build-push-action@v6
+    #   with:
+    #     context: .
+    #     push: true
+    #     tags: 290701/studenthub
 
 # name: Java CI with Maven
 
