--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: 290701/studenthub
+        tags: 290701/test
         builder: default
         provenance: false
         # Provide credentials here directly
