--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,22 +4,18 @@
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
-# documentation.
-name: Java CI with Maven and Docker
+# documentation.name: Java CI with Maven and Docker
 
 on:
   push:
     branches: [ "main" ]
-
-permissions:
-  contents: read
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
 
     - name: Set up JDK 17
@@ -27,21 +23,67 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
 
     - name: Build with Maven
       run: mvn clean package
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: 290701
+        password: dckr_pat_IpizDWGZQKoow8n75Vpzlhq-66Y
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
       with:
         context: .
         push: true
-        tags: 290701/test
-        builder: default
-        provenance: false
-        # Provide credentials here directly
-        username: 290701
-        password: dckr_pat_IpizDWGZQKoow8n75Vpzlhq-66Y
+        tags: 290701/test:latest
+
+
+
+
+
+# name: Java CI with Maven and Docker
+
+# on:
+#   push:
+#     branches: [ "main" ]
+
+# permissions:
+#   contents: read
+
+# jobs:
+#   build-and-push:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v4
+
+#     - name: Set up JDK 17
+#       uses: actions/setup-java@v4
+#       with:
+#         java-version: '17'
+#         distribution: 'temurin'
+#         cache: maven
+
+#     - name: Build with Maven
+#       run: mvn clean package
+#     - name: Build and push Docker image
+#       uses: docker/build-push-action@v6
+#       with:
+#         context: .
+#         push: true
+#         tags: 290701/test
+#         builder: default
+#         provenance: false
+#         # Provide credentials here directly
+#         username: 290701
+#         password: dckr_pat_IpizDWGZQKoow8n75Vpzlhq-66Y
 
 
     # - name: Login to Docker Hub
