--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: 290701/test:latest
+        tags: 290701/studenthub:latest
 
 
 
